data/derived/fa15/progs/unify/prog3746.ml.out
Characters 529-530:
  | Oscillate   m4	    -> let x = eval(m4,x,y) in x/.sqrt(eval(m4,x,y)**2+.x**2);;
                                                                        ^
Error: This expression has type int but an expression was expected of type
         float
